[tool.poetry]
name = "blind-charging"
version = "0.1.0"
description = "Mitigating bias in charging decisions with automated race redaction."
authors = [
    "Zhiyuan Lin <zylin@cs.stanford.edu>",
    "Alex Chohlas-Wood <alexcw@stanford.edu>",
    "Joe Nudell <jnu@stanford.edu>",
    "Amelia Goodman <amgood@stanford.edu>",
    "Keniel Yao <keniel.yao@stanford.edu>"
]
maintainers = [
    "Joe Nudell <jnu@stanford.edu>"
]
license = "MIT"
readme = "README.md"
packages = [{include = "blind_charging"}]

[tool.poetry.dependencies]
python = "^3.8"
unidecode = "^1.3.6"
spacy = "^3.4.4"
en-core-web-lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.4.1/en_core_web_lg-3.4.1-py3-none-any.whl"}
pandas = "^1.5.2"
strsim = "^0.0.3"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
