[project]
name = "blind-charging"
version = "0.1.0"
description = "Mitigating bias in charging decisions with automated race redaction."
authors = [
    { name = "Zhiyuan Lin", email = "zylin@cs.stanford.edu" },
    { name = "Alex Chohlas-Wood", email = "alexcw@stanford.edu" },
    { name = "Joe Nudell", email = "jnu@stanford.edu" },
    { name = "Amelia Goodman", email = "amgood@stanford.edu" },
    { name = "Keniel Yao", email = "keniel.yao@stanford.edu" },
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = "MIT"
maintainers = [{ name = "Joe Nudell", email = "jnu@stanford.edu" }]
dependencies = [
    "unidecode>=1.3.6,<2",
    "spacy>=3.4.4,<4",
    "en-core-web-lg",
    "pandas>=1.5.2,<2",
    "strsim>=0.0.3,<0.0.4",
]

[dependency-groups]
dev = [
    "pytest>=7.2.0,<8",
    "pre-commit>=2.20.0,<3",
    "coverage>=6.5.0,<7",
]

[tool.uv]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.4.1/en_core_web_lg-3.4.1-py3-none-any.whl" }

[tool.hatch.build.targets.sdist]
include = ["blind_charging"]

[tool.hatch.build.targets.wheel]
include = ["blind_charging"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
